traefik/deployment.yaml
---
# Source: traefik/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-traefik
  labels:
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-9.19.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: default
  annotations:
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: default
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template: 
    metadata:
      annotations:
      labels:
        app.kubernetes.io/name: traefik
        helm.sh/chart: traefik-9.19.0
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/instance: default
    spec:
      serviceAccountName: default-traefik
      terminationGracePeriodSeconds: 60
      hostNetwork: false
      containers:
      - image: "traefik:2.4.8"
        imagePullPolicy: IfNotPresent
        name: default-traefik
        resources:
        readinessProbe:
          httpGet:
            path: /ping
            port: 9000
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /ping
            port: 9000
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        ports:
        - name: "traefik"
          containerPort: 9000
          protocol: "TCP"
        - name: "web"
          containerPort: 8080
          protocol: "TCP"
        - name: "web-int"
          containerPort: 9080
          protocol: "TCP"
        - name: "websecure"
          containerPort: 8443
          protocol: "TCP"
        - name: "websecure-int"
          containerPort: 9443
          protocol: "TCP"
        securityContext:
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
        volumeMounts:
          - name: data
            mountPath: /data
          - name: tmp
            mountPath: /tmp
        args:
          - "--api.insecure=true"
          - "--entryPoints.traefik.address=:9000/tcp"
          - "--entryPoints.web.address=:8080/tcp"
          - "--entryPoints.web-int.address=:9080/tcp"
          - "--entryPoints.websecure.address=:8443/tcp"
          - "--entryPoints.websecure-int.address=:9443/tcp"
          - "--api.dashboard=true"
          - "--ping=true"
          - "--providers.kubernetescrd"
          - "--providers.kubernetesingress"
          - "--log.level=INFO"
          - "--accesslog=true"
          - "--accesslog.fields.defaultmode=keep"
          - "--accesslog.fields.headers.defaultmode=drop"
          - "--entrypoints.websecure.http.tls"
          - "--providers.kubernetesIngress.ingressClass=traefik-cert-manager"
      volumes:
        - name: data
          emptyDir: {}
        - name: tmp
          emptyDir: {}
      securityContext:
        fsGroup: 65532
